third_party/WebKit/Source/WebCore/history/BackForwardController.h
@@ -68,6 +68,8 @@ public:
     HistoryItem* currentItem() { return itemAtIndex(0); }
     HistoryItem* forwardItem() { return itemAtIndex(1); }
 
+    void markPagesForFullStyleRecalc();
+
 private:
     Page* m_page;
     RefPtr<BackForwardList> m_client;
